--- a/app/views/match_reviews/_match_info.html.erb
+++ b/app/views/match_reviews/_match_info.html.erb
@@ -1,7 +1,7 @@
-<%host_team_icon, guest_team_icon = team_icons_of_match @match
-time = @match.start_time.strftime("%m月%d日 %H:%M")
-location = @match.location
-result = @match.result_text%>
+<%host_team_icon, guest_team_icon = team_icons_of_match match_info
+time = match_info.start_time.strftime("%m月%d日 %H:%M")
+location = match_info.location
+result = match_info.result_text%>
 
 <%= host_team_icon%>
 <div class="m_result"><%= result%></div>
