--- a/app/views/official_matches/edit.html.erb
+++ b/app/views/official_matches/edit.html.erb
@@ -12,6 +12,11 @@
   <h2></h2>
   <ul class="sidebar_menu">
     <li>
+      > <%= link_to '新建球队', new_official_team_path %>
+    </li>
+    <li class='seperate'>
+    </li>
+    <li>
       > <%= link_to '返回比赛', @official_match %>
     </li>
   </ul>
