--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,6 @@
 
 <div id="narrow_right_content" class="sect">
   <h2></h2>
-  <%=render :partial=>'sidebar_menu'%>
+  <%=post_sidebar_menu @activity%>
 </div>
 <div class="cb"></div>
