--- a/app/views/match_reviews/show.html.erb
+++ b/app/views/match_reviews/show.html.erb
@@ -10,10 +10,10 @@
 
 <%if @can_reply%>
   <div class="sect cb">
-    <h2>回复</h2>
+    <h2 id="reply_form">回复</h2>
     <%= error_messages_for :reply %>
     <br/>
-    <% form_for :reply, :url => match_review_match_review_replies_path(@match_review, :page => @replies.current_page) do |f| %>
+    <% form_for :reply, :url => match_review_match_review_replies_path(@match_review, :page => @replies.current_page, :anchor=>'reply_form') do |f| %>
       <%= f.text_area :content, :rows=>10, :cols=>50 %>
       <br/><br/>
       <%= f.submit "提交" %>
@@ -25,7 +25,7 @@
 <div id="narrow_right_content">
   <h2>比赛信息</h2>
   <div class="sect mreview_minfo">
-    <%=render :partial=>'match_reviews/match_info'%>
+    <%=render :partial=>'match_reviews/match_info', :object => @match%>
   </div>
   <%=render :partial=>'match_reviews/sidebar_menu'%>
 </div>
