--- a/app/views/official_matches/new.html.erb
+++ b/app/views/official_matches/new.html.erb
@@ -7,5 +7,13 @@
     <p><%= submit_tag '创建' %></p>
   <% end -%>
 </div>
-  
+
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to '新建球队', new_official_team_path %>
+    </li>
+  </ul>
+</div>  
 <div class="cb"></div>
