--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -107,7 +107,7 @@
     <div class="cb"></div>
   </div>
 
-  <div id="wide_left_content" class="sect">
+  <div class="sect">
     <h2>最受欢迎的球评 <%= link_to "(发表新球评)", new_sided_match_match_review_path(@match)%></h2>
     <%if @reviews.length > 0%>
       <%=render :partial=>'match_reviews/match_review_list', :object=>@reviews%>
