--- a/app/views/trainings/users.html.erb
+++ b/app/views/trainings/users.html.erb
@@ -7,6 +7,21 @@
 
 <div id="narrow_right_content" class="sect">
   <h2></h2>
-  <%=render :partial=>'sidebar_menus/team_view_training_users'%>
+  <ul class="sidebar_menu">
+    <li <%= selected_class_sidebar_menu_item(:action=>'joined_users', :controller=>'trainings')%>>
+      > <%= link_to("参加这次训练的人", joined_users_training_path(@training)) %>
+    </li>
+    <li <%= selected_class_sidebar_menu_item(:action=>'undetermined_users', :controller=>'trainings')%>>
+      > <%= link_to("没表态是否参加的人", undetermined_users_training_path(@training)) %>
+    </li>
+    <li class='seperate'>
+    </li>
+    <li>
+      > <%= link_to '返回训练', training_path(@training) %>
+    </li>
+    <li>
+      > <%= link_to '返回球队首页', team_view_path(@team) %>
+    </li>
+  </ul>
 </div>
 <div class="cb"></div>
