--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -31,7 +31,7 @@
   </div>
   <%if !@watch.description.blank?%>
   <div class="sect">
-      <h2>比赛说明</h2>
+      <h2>看球活动说明</h2>
       <%=simple_format auto_link(h(@watch.description), :urls)%>
   </div>
   <%end%>
