--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -730,7 +730,7 @@ div.message div.content {
   overflow:hidden;
 }
 
-div.message div.content p {
+div.message div.content div.body {
   padding-bottom:20px;
 }
 
@@ -1212,7 +1212,7 @@ span.private,.todayDateDiv .todaySpan {
   font-size:9px;
 }
 
-div.post p,div.help p {
+div.help p {
   text-indent:2em;
 }
 
