--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -24,8 +24,8 @@
       <div>主题: <%=h @message.subject%></div>
     </div>
 
-    <div>
-    <%=simple_format auto_link(h(@message.content), :urls, :target => '_blank')%>
+    <div class="body">
+      <%=simple_format auto_link(h(@message.content), :urls, :target => '_blank')%>
     </div>
 
     <%=button_to "回复", send_message_to_path(@message.sender.id), :method=>:get if @message.sender!=current_user%>
