--- a/app/views/match_reviews/_match_info.html.erb
+++ b/app/views/match_reviews/_match_info.html.erb
@@ -8,8 +8,8 @@ result = match_info.result_text%>
 <%= guest_team_icon%>
 <div class="cb"></div>
 <div class="detail">
-  <span>时间: </span><%= time%><br />
+  <span>比赛时间: </span><%= time%><br />
   <%if !location.blank?%>
-    <span>地点: </span><%= location %>
+    <span>比赛地点: </span><%= location %>
   <%end%>
 </div>
