--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -18,7 +18,7 @@
       <hr />
       <%= link_to '了解一下WeFootball能做些什么？', site_about_path%>
       <br/><br/>
-      看球活动和球评功能上线 - 05.18
+      看球活动和球评功能上线测试 - 05.18
       <br/><br/>
       预告：<a href="http://blog.wefootball.org/2008/5/11/12">看球功能即将推出</a> - 05.11
       <br/><br/>
