--- a/app/views/official_matches/show.html.erb
+++ b/app/views/official_matches/show.html.erb
@@ -55,12 +55,12 @@
   <%end%>
 
   <div class="sect">
-    <h2>最受欢迎的球评 <%= link_to "(发表新球评)", new_official_match_match_review_path(@official_match)%></h2>
+    <h2>最受欢迎的球评 <%= link_to "(写一篇新球评...)", new_official_match_match_review_path(@official_match)%></h2>
     <%if @reviews.length > 0%>
       <%=render :partial=>'match_reviews/match_review_list', :object=>@reviews%>
       <div class="more">
         <%links = []%>
-        <%#links << %(> #{link_to "发表新球评", new_official_match_match_review_path(@official_match)})%>
+        <%#links << %(> #{link_to "写一篇新球评", new_official_match_match_review_path(@official_match)})%>
         <%links << %(> #{link_to "更多", official_match_match_reviews_path(@official_match)}) if @reviews.length >= OfficialMatchesController::REVIEW_LIST_LENGTH%>
         <%= links_with_sticks links%>
       </div>
