--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -84,12 +84,12 @@
 </div>
 
 <div id="wide_left_content" class="sect">
-  <h2>最受欢迎的球评 <%= link_to "(发表新球评)", new_match_match_review_path(@match)%></h2>
+  <h2>最受欢迎的球评 <%= link_to "(写一篇新球评...)", new_match_match_review_path(@match)%></h2>
   <%if @reviews.length > 0%>
     <%=render :partial=>'match_reviews/match_review_list', :object=>@reviews%>
     <div class="more">
       <%links = []%>
-      <%#links << %(> #{link_to "发表新球评", new_match_match_review_path(@match)})%>
+      <%#links << %(> #{link_to "写一篇新球评", new_match_match_review_path(@match)})%>
       <%links << %(> #{link_to "更多", match_match_reviews_path(@match)}) if @reviews.length >= MatchesController::REVIEW_LIST_LENGTH%>
       <%= links_with_sticks links%>
     </div>
