--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
   <%= link_to '关于我们', site_about_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
   <%= link_to '站务论坛', site_posts_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="http://blog.wefootball.org">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href="#">隐私声明</a>
+  <%= link_to '隐私原则', site_privacy_path %>
   </span>
   <div class="cb"></div>
 </div>
