--- a/app/views/shared/_help_sidebar_menu.html.erb
+++ b/app/views/shared/_help_sidebar_menu.html.erb
@@ -4,5 +4,8 @@
   </li>  
   <li <%= selected_class_sidebar_menu_item(:action=>'faq', :controller=>'application')%>>
     > <%= link_to "常见问题", site_faq_path %>
+  </li>
+  <li <%= selected_class_sidebar_menu_item(:action=>'privacy', :controller=>'application')%>>
+    > <%= link_to "隐私原则", site_privacy_path %>
   </li>  
 </ul>
